# yt-app

./: .gitignore  API.md  DB-SCHEMA.md  DECISIONS.md  PROJECT.md  README.md  ROADMAP.md  SPEC.md
.github/workflows/: build-windows.yml
admin/: index.html  package-lock.json  package.json  vite.config.ts
admin/src/: main.tsx  styles.css
admin/src/lib/: api.ts  dialog.tsx  themeStore.ts
admin/src/pages/: AccountPage.tsx  DashboardPage.tsx  Layout.tsx  LoginPage.tsx  ModelsPage.tsx  SettingsPage.tsx  UsersPage.tsx
client/: index.html  package-lock.json  package.json  vite.config.ts
client/src/: main.tsx  styles.css
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/src/: lib.rs  main.rs
client/src/components/: AccountView.tsx  AgentView.tsx  ChatPanel.tsx  ConversationList.tsx  SettingsView.tsx
client/src/lib/: agent.ts  agentSessionStore.ts  api.ts  builtinSkills.ts  chat.ts  chatStore.ts  dialog.tsx  memory.ts  settingsStore.ts  skills.ts  store.ts  themeStore.ts  tools.ts
client/src/pages/: LoginPage.tsx  WorkbenchPage.tsx
docs/: agent-capability-roadmap.md  desktop-build.md  plugin-dev.md
docs/plugin-examples/hash/: plugin.json  run.py
docs/plugin-examples/http_request/: plugin.json  run.py
docs/plugin-examples/sysinfo/: plugin.json  run.py
server/: .env.example  README.md  requirements.txt
server/app/: __init__.py  deps.py  main.py  models.py  schemas.py
server/app/core/: config.py  crypto.py  db.py  (+1 more)
server/scripts/: add_model.py  create_admin.py  create_user.py  migrate_v2.py
(+7 files in other folders)
