[package]
name = "yixiang-tiankai"
version = "0.5.0"
description = "异想天开 AI 客户端"
authors = ["YiXiang TianKai"]
edition = "2021"

[lib]
name = "yixiang_tiankai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
glob = "0.3"
regex = "1"
